# nixman

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  pacman.rs  versioning.rs
