[package]
name = "nixman"
version = "0.1.0"
edition = "2024"
description = "Recreate the Nix package manager style of package management for Arch Linux."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ofluffydev/nixman"
readme = "README.md"
keywords = ["nix", "arch", "package-manager", "nixman"]
categories = ["command-line-utilities", "os::linux-apis"]
authors = ["Fluffy <fufferpish@gmail.com>"]

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
